rename breakpoints api

--- a/src/breakpoints.pcss
+++ b/src/breakpoints.pcss
@@ -6,9 +6,9 @@
  */
 
 :root {
-  --bp-extra-small: 320px;
-  --bp-small: 576px;
-  --bp-medium: 768px;
-  --bp-large: 992px;
-  --bp-extra-large: 1200px;
+  --breakpoint-xs: 320px;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
 }
