--- a/src/colors/default.pcss
+++ b/src/colors/default.pcss
@@ -8,16 +8,17 @@
 :root {
   /* --- Accent color with dark and light variants --- */
   --color-accent-light: #5eb9f2;
-  --color-accent: #0072bc;
+  --color-accent: #30a5ef;
   --color-accent-dark: #0391ec;
 
   /* --- Base color with dark and light variants --- */
-  --color-base-light: #ccd1d9;
-  --color-base: #5c6970;
-  --color-base-dark: #434a5a;
+  --color-base-light: #36546d;
+  --color-base: #1d3344;
+  --color-base-dark: #001420;
 
   /* --- Surface, background and error color --- */
-  --color-surface: #f5f7fa;
+  --color-surface: #f7fcff;
   --color-background: #ffffff;
-  --color-error: #f44336;
+  --color-error: #f5222d;
+  --color-warning: '#faad14';
 }
