flat color palette

--- a/src/colors/default.pcss
+++ b/src/colors/default.pcss
@@ -6,19 +6,21 @@
  */
 
 :root {
-  /* --- Accent color with dark and light variants --- */
-  --color-accent-light: #5eb9f2;
-  --color-accent: #30a5ef;
-  --color-accent-dark: #0391ec;
-
-  /* --- Base color with dark and light variants --- */
-  --color-base-light: #36546d;
-  --color-base: #1d3344;
-  --color-base-dark: #001420;
-
-  /* --- Surface, background and error color --- */
-  --color-surface: #f7fcff;
-  --color-background: #ffffff;
-  --color-error: #f5222d;
-  --color-warning: '#faad14';
+  --primary-color: #1890ff;
+  --link-color: var(--primary-color);
+  --info-color: var(--primary-color);
+  --processing-color: var(--primary-color);
+  --highlight-color: var(--error-color);
+  --success-color: #52c41a;
+  --warning-color: #faad14;
+  --error-color: #f5222d;
+  --heading-color: rgba(0, 0, 0, 0.85);
+  --normal-color: #d9d9d9;
+  --text-color: rgba(0, 0, 0, 0.65);
+  --text-color-secondary: rgba(0, 0, 0, 0.45);
+  --disabled-color: rgba(0, 0, 0, 0.25);
+  --border-color-base: #d9d9d9;
+  --box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15);
+  --white: #fff;
+  --black: #000;
 }
