--- a/src/typography.pcss
+++ b/src/typography.pcss
@@ -5,9 +5,11 @@
  * LICENSE file in the root directory of this source tree.
  */
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600');
+
 :root {
-  --font-mc-sanserif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  --font-mc-sanserif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   --font-mc-monospace: 'Inconsolata', Consolas, Monaco, 'Andale Mono',
     'Ubuntu Mono', monospace;
 }
