--- a/src/colors/illustrations.pcss
+++ b/src/colors/illustrations.pcss
@@ -6,6 +6,6 @@
  */
 
 :root {
-  --color-fluo-accent: #00c9bd;
-  --color-fluo-base: #7168ff;
+  --fluo-accent-color: #00c9bd;
+  --fluo-base-color: #7168ff;
 }
