--- a/src/colors/default.pcss
+++ b/src/colors/default.pcss
@@ -6,20 +6,19 @@
  */
 
 :root {
-  --primary-color: #1890ff;
-  --link-color: var(--primary-color);
-  --info-color: var(--primary-color);
-  --processing-color: var(--primary-color);
-  --highlight-color: var(--error-color);
-  --success-color: #52c41a;
-  --warning-color: #faad14;
-  --error-color: #f5222d;
-  --heading-color: rgba(0, 0, 0, 0.85);
-  --normal-color: #d9d9d9;
-  --text-color: rgba(0, 0, 0, 0.65);
-  --text-color-secondary: rgba(0, 0, 0, 0.45);
-  --disabled-color: rgba(0, 0, 0, 0.25);
-  --border-color-base: #d9d9d9;
+  --primary-color: #0072bc;
+  --link-color: #0072bc;
+  --processing-color: #0072bc;
+  --highlight-color: #f44336;
+  --error-color: #f44336;
+  --warning-color: #ff9800;
+  --success-color: #4caf50;
+  --heading-color: #656d78;
+  --normal-color: #e6e9ed;
+  --text-color: #434a5a;
+  --text-color-secondary: #aab2bd;
+  --disabled-color: #e6e9ed;
+  --border-color-base: #ccd1d9;
   --box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15);
   --white: #fff;
   --black: #000;
