add info color into default palette

--- a/src/colors/default.pcss
+++ b/src/colors/default.pcss
@@ -11,6 +11,7 @@
   --processing-color: #0391ec;
   --highlight-color: #fc192f;
   --error-color: #fc192f;
+  --info-color: #0391ec;
   --warning-color: #ffb200;
   --success-color: #4caf50;
   --heading-color: #001420;
