--- a/lib/colors/illustration/index.scss
+++ b/lib/colors/illustration/index.scss
@@ -5,7 +5,5 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-export const illustrationsPalette = {
-  'fluo-accent-color': '#00c9bd',
-  'fluo-base-color': '#7168ff'
-};
+$color-fluo-accent: #00c9bd;
+$color-fluo-base: #7168ff;
