--- a/lib/typography/index.css
+++ b/lib/typography/index.css
@@ -6,8 +6,8 @@
  */
 
 :root {
-  --font-san-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  --font-monospace: "Inconsolata", Consolas, Monaco, "Andale Mono",
-    "Ubuntu Mono", monospace;
+  --font-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  --font-monospace: 'Inconsolata', Consolas, Monaco, 'Andale Mono',
+    'Ubuntu Mono', monospace;
 }
