--- a/lib/typography/index.scss
+++ b/lib/typography/index.scss
@@ -5,19 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$font-san-serif: "Open Sans",
--apple-system,
-BlinkMacSystemFont,
-"Segoe UI",
-Roboto,
-Oxygen-Sans,
-Ubuntu,
-Cantarell,
-"Helvetica Neue",
-sans-serif;
-$font-monospace: "Inconsolata",
-Consolas,
-Monaco,
-"Andale Mono",
-"Ubuntu Mono",
-monospace;
+$font-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+$font-monospace: 'Inconsolata', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
+  monospace;
