--- a/lib/colors/default/index.less
+++ b/lib/colors/default/index.less
@@ -14,7 +14,7 @@
 @color-accent700: #025d97;
 @color-accent800: #02426c;
 @color-accent900: #012841;
-@color-accent: @accent500;
+@color-accent: @color-accent500;
 @color-base100: #f7fcff;
 @color-base200: #deebf4;
 @color-base300: #c3d4e0;
@@ -24,7 +24,7 @@
 @color-base700: #36546d;
 @color-base800: #1d3344;
 @color-base900: #001420;
-@color-base: @base900;
+@color-base: @color-base900;
 @color-warning: #ffb200;
 @color-error: #fc192f;
 @color-white: #ffffff;
