add success color

--- a/lib/colors/default/index.less
+++ b/lib/colors/default/index.less
@@ -26,6 +26,7 @@
 @color-base900: #001420;
 @color-base: @color-base900;
 @color-warning: #ffb200;
+@color-success: #53c518;
 @color-error: #fc192f;
 @color-white: #ffffff;
 @color-black: #000000;
