--- a/lib/colors/default/index.css
+++ b/lib/colors/default/index.css
@@ -27,6 +27,7 @@
   --color-base900: #001420;
   --color-base: var(--color-base900);
   --color-warning: #ffb200;
+  --color-success: #53c518;
   --color-error: #fc192f;
   --color-white: #ffffff;
   --color-black: #000000;
