fix hexadecimal color values

--- a/src/css/colors/index.scss
+++ b/src/css/colors/index.scss
@@ -28,5 +28,5 @@ $color-base: $color-base900;
 $color-warning: #ffb200;
 $color-success: #53c518;
 $color-error: #fc192f;
-$color-white: #ffffff;
-$color-black: #000000;
+$color-white: #fff;
+$color-black: #000;
