--- a/src/css/colors/index.css
+++ b/src/css/colors/index.css
@@ -29,6 +29,6 @@
   --color-warning: #ffb200;
   --color-success: #53c518;
   --color-error: #fc192f;
-  --color-white: #ffffff;
-  --color-black: #000000;
+  --color-white: #fff;
+  --color-black: #000;
 }
