refine storybook contactlab theme

--- a/playground/templates/commons/layout.pug
+++ b/playground/templates/commons/layout.pug
@@ -9,5 +9,8 @@ html(lang='en')
     title #{PAGE_TITLE} - Contactlab Design Tokens
 
   body
-    .container
+    header.header
+      block header
+
+    main.container
       block content
