--- a/playground/templates/commons/mixins.pug
+++ b/playground/templates/commons/mixins.pug
@@ -1,7 +1,7 @@
 mixin renderIntro(details)
   .intro
-    h1.intro-title= details.title
-    p.intro-description= details.description
+    h1.intro__title= details.title
+    p.intro__description= details.description
 
 mixin renderColorCards(colors)
   each color in colors
