--- a/playground/templates/tokens/illustrations.pug
+++ b/playground/templates/tokens/illustrations.pug
@@ -3,13 +3,12 @@ extends ../commons/layout.pug
 block config
   - const PAGE_TITLE = "The Illustration Token";
 
-block content
-
+block header
   +renderIntro({
     title: PAGE_TITLE,
     description: `Colors are a very important means of communication in any visual language, and one of the most effective ways of transposing one or more concepts from one place to another. Our cold color palettes are designed to help users visually assimilate very technical and complex interfaces.`
   })
 
-
+block content
   - const illustrations = ['shuttle-loader', 'astroboy-gasp', 'astroboy-kidnapping', 'astroboy-lost', 'astroboy-warning', 'empty', 'under-construction'];
   +renderIllustrations(illustrations)
