--- a/playground/templates/tokens/typography.pug
+++ b/playground/templates/tokens/typography.pug
@@ -3,14 +3,13 @@ extends ../commons/layout.pug
 block config
   - const PAGE_TITLE = "The Type Token";
 
-block content
-
+block header
   +renderIntro({
     title: PAGE_TITLE,
     description: `In general, text elements and typography play a very important role, and represent one of the main ways of conveying information from one point to another. As a result, we decided to shape a user’s experience right down to this level. Our visual language uses the same font as the one that is available and enabled by default, in the operating system the user employs. In this way, we attempt to make the characters immediately recognizable and avoid any potential text assimilation or reading issues.`
   })
 
-
+block content
   .row
     .col.col-fifth
       h1 Montserrat Font
