--- a/lib/styles/fonts/index.pcss
+++ b/lib/styles/fonts/index.pcss
@@ -7,8 +7,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
 
 :root {
-  --default-fonts: 'Montserrat', -apple-system, 'BlinkMacSystemFont', 'Segoe UI',
-    'Roboto', 'Helvetica Neue', sans-serif;
+  --default-fonts: 'Montserrat', sans-serif;
   --monospace-fonts: 'Inconsolata', 'Consolas', 'Monaco', 'Andale Mono',
     'Ubuntu Mono', monospace;
 }
