--- a/playground/styles/elevations.pcss
+++ b/playground/styles/elevations.pcss
@@ -1,14 +1,13 @@
 .elevated-boxes {
   display: flex;
-  padding: 4.8rem;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: var(--color-base100);
+  /* background-color: var(--color-base100); */
 
   & > [class*='shadow-elevation' i] {
     width: calc(100% / 3);
     height: 16rem;
-    margin: 2rem;
+    margin: 0 2rem 6rem;
     position: relative;
     background-color: var(--color-white);
 
