--- a/playground/styles/global.pcss
+++ b/playground/styles/global.pcss
@@ -1,12 +1,36 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/gridly/1.4.13/gridly.min.css';
 
+.header {
+  padding-top: 2rem;
+  padding-bottom: 8rem;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  background-color: var(--color-base100);
+}
+
+.intro,
 .container {
   max-width: 144rem;
   margin: 0 auto;
-  padding: 4rem;
+  padding: 2rem;
+}
 
-  .col {
-    padding: 1rem 2rem;
+.intro {
+  display: flex;
+
+  &__title,
+  &__description {
+    padding: 2rem;
+  }
+
+  &__title {
+    margin-bottom: 0;
+    flex: 0 0 25%;
+  }
+}
+
+.container {
+  .row > .col {
+    padding: 2rem;
   }
 
   section {
@@ -17,24 +41,6 @@
     display: block;
     margin-bottom: 0.5rem;
   }
-}
-
-.intro {
-  display: flex;
-  margin-bottom: 4rem;
-  border-bottom: 1px solid var(--color-base200);
-  padding-bottom: 4rem;
-}
-
-.intro-title {
-  margin-bottom: 0;
-  flex: 0 0 33.333%;
-  color: var(--color-accent);
-}
-
-.intro-description {
-  margin-bottom: 0;
-  margin-left: 2.8rem;
 }
 
 .resource-cards {
