add design-tokens notes

--- a/lib/styles/typography/index.pcss
+++ b/lib/styles/typography/index.pcss
@@ -74,25 +74,28 @@ h6 {
 .subheading-1,
 .subheading-2,
 .subheading-3 {
-  color: var(--color-base700);
+  color: var(--color-base500);
   font-weight: normal;
   text-rendering: optimizeLegibility;
   line-height: 1.3em;
 }
 
 .subheading-1 {
-  margin-bottom: 1.8rem;
-  font-size: 2.4rem;
-}
-
-.subheading-2 {
+  display: block;
   margin-bottom: 1.6rem;
   font-size: 2.2rem;
 }
 
-.subheading-3 {
+.subheading-2 {
+  display: block;
   margin-bottom: 1.4rem;
   font-size: 2rem;
+}
+
+.subheading-3 {
+  display: block;
+  margin-bottom: 1.2rem;
+  font-size: 1.8rem;
 }
 
 p {
