--- a/playground/templates/design-tokens/typography.pug
+++ b/playground/templates/design-tokens/typography.pug
@@ -5,6 +5,7 @@ block config
 
 block header
   +renderIntro({
+    category: 'Design Tokens',
     title: PAGE_TITLE,
     description: `In general, text elements and typography play a very important role, and represent one of the main ways of conveying information from one point to another. As a result, we decided to shape a user’s experience right down to this level. Our visual language uses the same font as the one that is available and enabled by default, in the operating system the user employs. In this way, we attempt to make the characters immediately recognizable and avoid any potential text assimilation or reading issues.`
   })
@@ -12,7 +13,7 @@ block header
 block content
   .row
     .col.col-fifth
-      h1 Montserrat Font
+      h2 Montserrat Font
 
     .col
       section.specimen-chars
