--- a/playground/templates/design-tokens/colors.pug
+++ b/playground/templates/design-tokens/colors.pug
@@ -5,6 +5,7 @@ block config
 
 block header
   +renderIntro({
+    category: 'Design Tokens',
     title: PAGE_TITLE,
     description: `Colors are a very important means of communication in any visual language, and one of the most effective ways of transposing one or more concepts from one place to another. Our cold color palettes are designed to help users visually assimilate very technical and complex interfaces.`
   })
@@ -12,24 +13,24 @@ block header
 block content
   .row
     .col.col-third
-      h1 Base
+      h2 Base
       section.color-palette
         - const baseColors = [{type: 'base100', hex: '#f7fcff'}, {type: 'base200', hex: '#deebf4'}, {type: 'base300', hex: '#c3d4e0'}, {type: 'base400', hex: '#9cb0bf'}, {type: 'base500', hex: '#7e96a8'}, {type: 'base600', hex: '#5b768c'}, {type: 'base700', hex: '#36546d'}, {type: 'base800', hex: '#1d3344'}, {type: 'base900', hex: '#001420'}];
         +renderColorCards(baseColors)
 
-      h1 Illustrations
+      h2 Illustrations
       section.color-palette
         - const fluoColors = [{type: 'fluo-base300', hex: '#e9e8ff'}, {type: 'fluo-base600', hex: '#b4afff'}, {type: 'fluo-base900', hex: '#7168ff'}, {type: 'fluo-accent300', hex: '#e1f9ef'}, {type: 'fluo-accent600', hex: '#9bebd0'}, {type: 'fluo-accent900', hex: '#00c9bd'}];
         +renderColorCards(fluoColors)
 
 
     .col.col-third
-      h1 Accent
+      h2 Accent
       section.color-palette
         - const accentColors = [{type: 'accent100', hex: '#bae1f9'}, {type: 'accent200', hex: '#8ccdf6'}, {type: 'accent300', hex: '#5eb9f2'}, {type: 'accent400', hex: '#30a5ef'}, {type: 'accent500', hex: '#0391ec'}, {type: 'accent600', hex: '#0072bc'}, {type: 'accent700', hex: '#025d97'}, {type: 'accent800', hex: '#02426c'}, {type: 'accent900', hex: '#012841'}];
         +renderColorCards(accentColors)
 
-      h1 Feedbacks
+      h2 Feedbacks
       section.color-palette
         - const feedbackColors = [{type: 'success', hex: '#53c518'}, {type: 'warning', hex: '#ffb200'}, {type: 'error', hex: '#fc192f'}];
         +renderColorCards(feedbackColors)
