--- a/playground/templates/design-tokens/illustrations.pug
+++ b/playground/templates/design-tokens/illustrations.pug
@@ -5,6 +5,7 @@ block config
 
 block header
   +renderIntro({
+    category: 'Design Tokens',
     title: PAGE_TITLE,
     description: `Colors are a very important means of communication in any visual language, and one of the most effective ways of transposing one or more concepts from one place to another. Our cold color palettes are designed to help users visually assimilate very technical and complex interfaces.`
   })
