add colors spec

--- a/lib/styles/typography/index.pcss
+++ b/lib/styles/typography/index.pcss
@@ -24,7 +24,7 @@ h4,
 h5,
 h6,
 .hero-text {
-  color: var(--color-base);
+  color: var(--color-base900);
   font-weight: bold;
   text-rendering: optimizeLegibility;
 }
