--- a/playground/styles/main.pcss
+++ b/playground/styles/main.pcss
@@ -1,6 +1,9 @@
 /* Style tokens */
 @import '../../lib/styles/bundle/index.pcss';
 
+/* https://sindresorhus.com/github-markdown-css/ */
+@import './github-markdown.pcss';
+
 /* Template styles */
 @import './colors.pcss';
 @import './elevations.pcss';
