--- a/lib/styles/colors/index.scss
+++ b/lib/styles/colors/index.scss
@@ -14,7 +14,6 @@ $colors: (
   accent700: #025d97,
   accent800: #02426c,
   accent900: #012841,
-  accent: #0391ec,
   base100: #f7fcff,
   base200: #deebf4,
   base300: #c3d4e0,
@@ -24,16 +23,15 @@ $colors: (
   base700: #36546d,
   base800: #1d3344,
   base900: #001420,
-  base: #001420,
   success: #53c518,
   warning: #ffb200,
   error: #fc192f,
   white: #fff,
   black: #000,
-  i-base-sm: #e9e8ff,
-  i-base-md: #b4afff,
-  i-base-lg: #7168ff,
-  i-accent-sm: #e1f9ef,
-  i-accent-md: #9bebd0,
-  i-accent-lg: #00c9bd
+  fluo-base300: #e9e8ff,
+  fluo-base600: #b4afff,
+  fluo-base900: #7168ff,
+  fluo-accent300: #e1f9ef,
+  fluo-accent600: #9bebd0,
+  fluo-accent900: #00c9bd
 );
