--- a/lib/styles/utils/colors/index.pcss
+++ b/lib/styles/utils/colors/index.pcss
@@ -12,7 +12,7 @@
     Colors
    ========================================================================== */
 
-/* Feedback colors and backgrounds */
+/* Feedback + neutral colors and backgrounds */
 @each $type in white, black, success, warning, error {
   .color-$(type) {
     color: var(--color-$(type)) !important;
@@ -35,8 +35,8 @@
 }
 
 /* Base colors and backgrounds */
-@each $type in base, base100, base200, base300, base400, base500, base600,
-  base700, base800, base900
+@each $type in base100, base200, base300, base400, base500, base600, base700,
+  base800, base900
 {
   .color-$(type) {
     color: var(--color-$(type)) !important;
@@ -48,8 +48,8 @@
 }
 
 /* Accent colors and backgrounds */
-@each $type in accent, accent100, accent200, accent300, accent400, accent500,
-  accent600, accent700, accent800, accent900
+@each $type in accent100, accent200, accent300, accent400, accent500, accent600,
+  accent700, accent800, accent900
 {
   .color-$(type) {
     color: var(--color-$(type)) !important;
