--- a/playground/templates/design-tokens/colors.pug
+++ b/playground/templates/design-tokens/colors.pug
@@ -13,7 +13,7 @@ block header
 block content
   .row
     .col.col-third
-      h2 Base
+      h2 Bases
       section.color-palette
         - const baseColors = [{type: 'base100', hex: '#f7fcff'}, {type: 'base200', hex: '#deebf4'}, {type: 'base300', hex: '#c3d4e0'}, {type: 'base400', hex: '#9cb0bf'}, {type: 'base500', hex: '#7e96a8'}, {type: 'base600', hex: '#5b768c'}, {type: 'base700', hex: '#36546d'}, {type: 'base800', hex: '#1d3344'}, {type: 'base900', hex: '#001420'}];
         +renderColorCards(baseColors)
@@ -25,7 +25,7 @@ block content
 
 
     .col.col-third
-      h2 Accent
+      h2 Accents
       section.color-palette
         - const accentColors = [{type: 'accent100', hex: '#bae1f9'}, {type: 'accent200', hex: '#8ccdf6'}, {type: 'accent300', hex: '#5eb9f2'}, {type: 'accent400', hex: '#30a5ef'}, {type: 'accent500', hex: '#0391ec'}, {type: 'accent600', hex: '#0072bc'}, {type: 'accent700', hex: '#025d97'}, {type: 'accent800', hex: '#02426c'}, {type: 'accent900', hex: '#012841'}];
         +renderColorCards(accentColors)
