update colors doc markdown

--- a/playground/styles/design-tokens/colors.pcss
+++ b/playground/styles/design-tokens/colors.pcss
@@ -32,7 +32,7 @@
   &.bgcolor-success,
   &.bgcolor-warning,
   &.bgcolor-error {
-    color: var(--color-white);
+    color: #fff;
   }
 
   &.bgcolor-base700,
@@ -43,7 +43,7 @@
   &.bgcolor-warning,
   &.bgcolor-error {
     width: 100%;
-    color: var(--color-white);
+    color: #fff;
   }
 
   &.bgcolor-base700,
