--- a/playground/styles/main.pcss
+++ b/playground/styles/main.pcss
@@ -1,12 +1,12 @@
 /* Style tokens */
 @import '../../lib/styles/bundle/index.pcss';
+@import './global.pcss';
 
 /* https://sindresorhus.com/github-markdown-css/ */
-@import './github-markdown.pcss';
+@import './vendors/markdown.pcss';
 
-/* Template styles */
-@import './colors.pcss';
-@import './elevations.pcss';
-@import './global.pcss';
-@import './illustrations.pcss';
-@import './typography.pcss';
+/* Design Tokens */
+@import './design-tokens/colors.pcss';
+@import './design-tokens/elevations.pcss';
+@import './design-tokens/illustrations.pcss';
+@import './design-tokens/typography.pcss';
