--- a/lib/styles/bundle/index.pcss
+++ b/lib/styles/bundle/index.pcss
@@ -5,6 +5,7 @@
  */
 
 @import '../resets/index.pcss';
+@import '../commons/index.pcss';
 @import '../breakpoints/index.pcss';
 @import '../colors/index.pcss';
 @import '../elevations/index.pcss';
