--- a/lib/styles/typography/index.pcss
+++ b/lib/styles/typography/index.pcss
@@ -105,8 +105,8 @@ p {
 mark {
   border-radius: 2px;
   padding: 1.5px 4px;
-  color: var(--color-white);
-  background-color: var(--color-accent);
+  color: #fff;
+  background-color: var(--color-accent500);
 }
 
 small {
