--- a/playground/styles/design-tokens/elevations.pcss
+++ b/playground/styles/design-tokens/elevations.pcss
@@ -8,7 +8,7 @@
     height: 16rem;
     margin: 0 2rem 6rem;
     position: relative;
-    background-color: var(--color-white);
+    background-color: #fff;
 
     h2 {
       margin-right: 2.4rem;
