--- a/playground/templates/design-tokens/colors.pug
+++ b/playground/templates/design-tokens/colors.pug
@@ -15,24 +15,24 @@ block content
     .col.col-third
       h2 Bases
       section.color-palette
-        - const baseColors = [{type: 'base100', hex: '#f7fcff'}, {type: 'base200', hex: '#deebf4'}, {type: 'base300', hex: '#c3d4e0'}, {type: 'base400', hex: '#9cb0bf'}, {type: 'base500', hex: '#7e96a8'}, {type: 'base600', hex: '#5b768c'}, {type: 'base700', hex: '#36546d'}, {type: 'base800', hex: '#1d3344'}, {type: 'base900', hex: '#001420'}];
+        - const baseColors = [{type: 'base100', hex: 'f7fcff'}, {type: 'base200', hex: 'deebf4'}, {type: 'base300', hex: 'c3d4e0'}, {type: 'base400', hex: '9cb0bf'}, {type: 'base500', hex: '7e96a8'}, {type: 'base600', hex: '5b768c'}, {type: 'base700', hex: '36546d'}, {type: 'base800', hex: '1d3344'}, {type: 'base900', hex: '001420'}];
         +renderColorCards(baseColors)
 
       h2 Illustrations
       section.color-palette
-        - const fluoColors = [{type: 'fluo-base300', hex: '#e9e8ff'}, {type: 'fluo-base600', hex: '#b4afff'}, {type: 'fluo-base900', hex: '#7168ff'}, {type: 'fluo-accent300', hex: '#e1f9ef'}, {type: 'fluo-accent600', hex: '#9bebd0'}, {type: 'fluo-accent900', hex: '#00c9bd'}];
+        - const fluoColors = [{type: 'fluo-base300', hex: 'e9e8ff'}, {type: 'fluo-base600', hex: 'b4afff'}, {type: 'fluo-base900', hex: '7168ff'}, {type: 'fluo-accent300', hex: 'e1f9ef'}, {type: 'fluo-accent600', hex: '9bebd0'}, {type: 'fluo-accent900', hex: '00c9bd'}];
         +renderColorCards(fluoColors)
 
 
     .col.col-third
       h2 Accents
       section.color-palette
-        - const accentColors = [{type: 'accent100', hex: '#bae1f9'}, {type: 'accent200', hex: '#8ccdf6'}, {type: 'accent300', hex: '#5eb9f2'}, {type: 'accent400', hex: '#30a5ef'}, {type: 'accent500', hex: '#0391ec'}, {type: 'accent600', hex: '#0072bc'}, {type: 'accent700', hex: '#025d97'}, {type: 'accent800', hex: '#02426c'}, {type: 'accent900', hex: '#012841'}];
+        - const accentColors = [{type: 'accent100', hex: 'bae1f9'}, {type: 'accent200', hex: '8ccdf6'}, {type: 'accent300', hex: '5eb9f2'}, {type: 'accent400', hex: '30a5ef'}, {type: 'accent500', hex: '0391ec'}, {type: 'accent600', hex: '0072bc'}, {type: 'accent700', hex: '025d97'}, {type: 'accent800', hex: '02426c'}, {type: 'accent900', hex: '012841'}];
         +renderColorCards(accentColors)
 
       h2 Feedbacks
       section.color-palette
-        - const feedbackColors = [{type: 'success', hex: '#53c518'}, {type: 'warning', hex: '#ffb200'}, {type: 'error', hex: '#fc192f'}];
+        - const feedbackColors = [{type: 'success', hex: '53c518'}, {type: 'warning', hex: 'ffb200'}, {type: 'error', hex: 'fc192f'}];
         +renderColorCards(feedbackColors)
 
 
@@ -49,3 +49,8 @@ block content
         a.resource-card(target='_blank', href='')
           img(src='/images/vendor/illustrator-logo.png')
           span Color Token (#[strong .ai])
+
+
+  .contrast-grid
+    h2 Color Contrast Grid
+    include ../../assets/misc/color-contrast-grid.html
