add color contrast grid

--- a/playground/templates/design-tokens/colors.pug
+++ b/playground/templates/design-tokens/colors.pug
@@ -53,4 +53,5 @@ block content
 
   .contrast-grid
     h2 Color Contrast Grid
+    .subheading-3 Thanks to []
     include ../../assets/misc/color-contrast-grid.html
