fix colors and typography sections

--- a/lib/styles/colors/index.pcss
+++ b/lib/styles/colors/index.pcss
@@ -23,6 +23,7 @@
   --color-base700: #36546d;
   --color-base800: #1d3344;
   --color-base900: #001420;
+  --color-info: #0391ec;
   --color-success: #53c518;
   --color-warning: #ffb200;
   --color-error: #fc192f;
