--- a/lib/styles/utils/colors/index.pcss
+++ b/lib/styles/utils/colors/index.pcss
@@ -24,7 +24,7 @@
 }
 
 /* Illustration colors and backgrounds */
-@each $type in white, black, success, warning, error {
+@each $type in info, success, warning, error, black, white {
   .color-$(type) {
     color: var(--color-$(type)) !important;
   }
