--- a/lib/styles/colors/index.less
+++ b/lib/styles/colors/index.less
@@ -27,6 +27,7 @@
   base700: #36546d;
   base800: #1d3344;
   base900: #001420;
+  info: #0391ec;
   success: #53c518;
   warning: #ffb200;
   error: #fc192f;
