--- a/playground/styles/global.pcss
+++ b/playground/styles/global.pcss
@@ -1,5 +1,3 @@
-@import 'https://cdnjs.cloudflare.com/ajax/libs/gridly/1.4.13/gridly.min.css';
-
 .header {
   padding-top: 2rem;
   padding-bottom: 8rem;
@@ -15,8 +13,7 @@
 }
 
 .intro {
-  display: flex;
-  align-items: center;
+  align-items: flex-start;
 
   &__title,
   &__description {
@@ -26,22 +23,17 @@
 
   &__title {
     display: flex;
-    flex: 0 0 25%;
     flex-direction: column-reverse;
-  }
-
-  &__description {
-    flex-basis: auto;
   }
 }
 
 .container {
-  .row > .col {
-    padding: 2rem;
+  .col {
+    padding: 1.8rem;
   }
 
   section {
-    margin-bottom: 6.8rem;
+    margin-bottom: 4.8rem;
   }
 
   small {
@@ -50,16 +42,10 @@
   }
 }
 
-.resource-cards {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .resource-card {
-  display: inline-block;
+  display: block;
   overflow: hidden;
   width: 100%;
-  margin-bottom: 2.5rem;
   border-radius: 0.5rem;
   padding: 1.4rem 0 1.4rem 6rem;
   position: relative;
@@ -67,6 +53,10 @@
   text-decoration: none;
   transition: var(--shadow-transition);
   cursor: pointer;
+
+  & + & {
+    margin-top: 2.8rem;
+  }
 
   &:hover {
     box-shadow: var(--shadow-elevation-2dp);
@@ -87,7 +77,7 @@
 }
 
 .notes {
-  margin-top: 4rem;
+  margin-top: 2.8rem;
   color: var(--color-base600);
   font-size: 1.2rem;
   line-height: 1.4em;
