--- a/playground/styles/main.pcss
+++ b/playground/styles/main.pcss
@@ -1,9 +1,10 @@
+/* Vendors */
+@import 'https://unpkg.com/tailwindcss@latest/dist/tailwind.min.css';
+@import './vendors/markdown.pcss';
+
 /* Style tokens */
 @import '../../lib/styles/bundle/index.pcss';
 @import './global.pcss';
-
-/* https://sindresorhus.com/github-markdown-css/ */
-@import './vendors/markdown.pcss';
 
 /* Design Tokens */
 @import './design-tokens/colors.pcss';
