--- a/playground/templates/design-tokens/colors.pug
+++ b/playground/templates/design-tokens/colors.pug
@@ -31,7 +31,7 @@ block content
         span Color Token (#[strong .ai])
 
   .flex.flex-wrap
-    div.col(class="w:full md:w-1/2")
+    .col(class="w:full md:w-1/2")
       h2 Bases
       section.color-palette
         +renderColorCards(BASE_COLORS)
@@ -41,7 +41,7 @@ block content
         +renderColorCards(FLUO_COLORS)
         p.color-palette__warning Illustrations color palette is reserved for Contactlab Marketing Cloud artworks.
 
-    div.col(class="w:full md:w-1/2")
+    .col(class="w:full md:w-1/2")
       h2 Accents
       section.color-palette
         +renderColorCards(ACCENT_COLORS)
