--- a/playground/styles/design-tokens/elevations.pcss
+++ b/playground/styles/design-tokens/elevations.pcss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
 
-  & > [class*='shadow-elevation' i] {
+  & > * {
     width: calc(100% / 3);
     height: 16rem;
     margin: 0 2rem 6rem;
@@ -19,22 +19,22 @@
   }
 }
 
-.shadow-elevation-0dp:hover {
-  box-shadow: var(--shadow-elevation-1dp);
+.elevation-0dp:hover {
+  box-shadow: var(--elevation-1dp);
 }
 
-.shadow-elevation-1dp:hover {
-  box-shadow: var(--shadow-elevation-2dp);
+.elevation-1dp:hover {
+  box-shadow: var(--elevation-2dp);
 }
 
-.shadow-elevation-2dp:hover {
-  box-shadow: var(--shadow-elevation-3dp);
+.elevation-2dp:hover {
+  box-shadow: var(--elevation-3dp);
 }
 
-.shadow-elevation-3dp:hover {
-  box-shadow: var(--shadow-elevation-4dp);
+.elevation-3dp:hover {
+  box-shadow: var(--elevation-4dp);
 }
 
-.shadow-elevation-4dp:hover {
-  box-shadow: var(--shadow-elevation-5dp);
+.elevation-4dp:hover {
+  box-shadow: var(--elevation-5dp);
 }
