--- a/playground/styles/global.pcss
+++ b/playground/styles/global.pcss
@@ -47,11 +47,14 @@
   overflow: hidden;
   width: 100%;
   border-radius: 0.5rem;
-  padding: 1.4rem 0 1.4rem 6rem;
+  padding: 1.4rem 1.8rem;
+  padding-left: 6.5rem;
   position: relative;
-  box-shadow: var(--shadow-elevation-1dp);
+  box-shadow: var(--elevation-1dp);
   text-decoration: none;
-  transition: var(--shadow-transition);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: var(--elevation-transition);
   cursor: pointer;
 
   & + & {
@@ -59,7 +62,7 @@
   }
 
   &:hover {
-    box-shadow: var(--shadow-elevation-2dp);
+    box-shadow: var(--elevation-2dp);
   }
 
   img {
@@ -67,7 +70,7 @@
     height: 28px;
     position: absolute;
     top: 50%;
-    left: 3rem;
+    left: 3.5rem;
     transform: translate(-50%, -50%);
   }
 
